--- a/io/SConscript
+++ b/io/SConscript
@@ -3,7 +3,7 @@
 #
 
 # -*- mode: python; -*-
-import platform
+import six
 import subprocess
 
 Import('BuildEnv')
@@ -46,6 +46,7 @@ src_root = Dir('#').srcnode().abspath
 gpp_version = subprocess.check_output(
     "g++ --version | grep g++ | awk '{print $3}'",
     shell=True).rstrip()
+gpp_version = six.ensure_str(gpp_version)
 gpp_version_major = int(gpp_version.split(".")[0])
 
 create_boost_ssl_dir =  env.Command("create_boost_ssl_dir", [],
