--- a/http/client/SConscript
+++ b/http/client/SConscript
@@ -4,10 +4,9 @@
 
 Import('BuildEnv')
 import sys
-import platform
 
-def MapBuildDir(list):
-    return map(lambda x: '#/' + Dir('.').path + '/../../' + x, list)
+def MapBuildDir(dirs):
+    return list(map(lambda x: '#/' + Dir('.').path + '/../../' + x, dirs))
 
 env = BuildEnv.Clone()
 
