boost169: adaption of the code to 1.69
Change-Id: Iaecca1952b9be4f5246ff40af82f844650509f43

--- a/sandesh/compiler/SConscript
+++ b/sandesh/compiler/SConscript
@@ -47,3 +47,5 @@ sandesh = env.Program(target = 'sandesh',
                                 'parse/parse.cc',
                                ])
 env.Install(env['TOP_BIN'], sandesh)
+
+env.Alias('sandesh', sandesh)
