--- a/config-client-mgr/SConscript
+++ b/config-client-mgr/SConscript
@@ -12,11 +12,11 @@ env.Append(CPPPATH = [env['TOP'] + '/config-client-mgr'])
 env.Append(CPPPATH = [env['TOP'] + '/base/sandesh'])
 env.Append(CPPPATH = [env['TOP'] + '/database'])
 
-etcd_incl = os.environ.get('CONTRAIL_ETCD_INCL');
+#etcd_incl = os.environ.get('CONTRAIL_ETCD_INCL');
 
-if etcd_incl:
-    env.Append(CXXFLAGS = '-Wall -DCONTRAIL_ETCD_INCL -std=c++11')
-    env.Prepend(LIBS=['etcdql'])
+#if etcd_incl:
+#    env.Append(CXXFLAGS = '-Wall -DCONTRAIL_ETCD_INCL -std=c++11')
+#    env.Prepend(LIBS=['etcdql'])
 
 env.Prepend(LIBS=['io', 'base', 'cassandra_cql', 'cassandra', 'gendb', 'SimpleAmqpClient'])
 
@@ -40,20 +40,20 @@ except_env = BuildEnv.Clone()
 except_env.CppEnableExceptions()
 except_env.Append(CPPPATH = env['TOP'])
 
-if etcd_incl:
-    libconfig_client_mgr = env.Library('config_client_mgr',
-                         ['config_amqp_client.cc',
-                          'config_cass2json_adapter.cc',
-                          'config_cassandra_client.cc',
-                          'config_etcd_client.cc',
-                          'config_client_manager.cc',
-                          'config_db_client.cc',
-                          'config_factory.cc',
-                          'config_client_log.cc',
-                          'config_json_parser_base.cc',
-                         ] + sandesh_objs)
-else:
-    libconfig_client_mgr = env.Library('config_client_mgr',
+#if etcd_incl:
+#    libconfig_client_mgr = env.Library('config_client_mgr',
+#                         ['config_amqp_client.cc',
+#                          'config_cass2json_adapter.cc',
+#                          'config_cassandra_client.cc',
+#                          'config_etcd_client.cc',
+#                          'config_client_manager.cc',
+#                          'config_db_client.cc',
+#                          'config_factory.cc',
+#                          'config_client_log.cc',
+#                          'config_json_parser_base.cc',
+#                         ] + sandesh_objs)
+#else:
+libconfig_client_mgr = env.Library('config_client_mgr',
                          ['config_amqp_client.cc',
                           'config_cass2json_adapter.cc',
                           'config_cassandra_client.cc',
