--- a/io/test/SConscript
+++ b/io/test/SConscript
@@ -8,7 +8,7 @@ Import('BuildEnv')
 import platform
 
 env = BuildEnv.Clone()
-env.CppDisableExceptions()
+#env.CppDisableExceptions()
 env.Append(CPPPATH = [env['TOP']])
 
 env.Append(LIBPATH = ['#/' + Dir('..').path,
