remove unused deps
Change-Id: I25c484c75e75cab35a43a6cbc4175c894aa49de9

--- a/libpartition/SConscript
+++ b/libpartition/SConscript
@@ -24,6 +24,7 @@ local_sources = [
     '__init__.py',
     'libpartition.py',
     'consistent_hash.py',
+    'consistent_schdlr.py',
 ]
 
 local_sources_rules = []
