--- a/io/SConscript
+++ b/io/SConscript
@@ -3,7 +3,6 @@
 #
 
 # -*- mode: python; -*-
-import six
 import subprocess
 
 Import('BuildEnv')
@@ -46,7 +45,8 @@ src_root = Dir('#').srcnode().abspath
 gpp_version = subprocess.check_output(
     "g++ --version | grep g++ | awk '{print $3}'",
     shell=True).rstrip()
-gpp_version = six.ensure_str(gpp_version)
+if isinstance(gpp_version, bytes):
+    gpp_version = gpp_version.decode()
 gpp_version_major = int(gpp_version.split(".")[0])
 
 # IO
