remove outdated options
- freebsd
- darwin/apply
- coverage
- valgrind

Change-Id: I9f5e98fc23742d83ef7aacae4222e97461edbd91

--- a/sandesh/compiler/SConscript
+++ b/sandesh/compiler/SConscript
@@ -9,8 +9,7 @@ Import('SandeshEnv')
 
 env = SandeshEnv.Clone();
 
-rmflags = ['-Wsign-compare', '-Werror', '-fno-exceptions',
-           '--coverage']
+rmflags = ['-Wsign-compare', '-Werror', '-fno-exceptions']
 
 cflags = env['CCFLAGS']
 for flag in rmflags:
