--- a/libpartition/SConscript
+++ b/libpartition/SConscript
@@ -1,15 +1,16 @@
-# -*- mode: python; -*-
-
 #
 # Copyright (c) 2013 Juniper Networks, Inc. All rights reserved.
 #
 
-import os
-
 Import('BuildEnv')
-PartEnv = BuildEnv.Clone()
+env = BuildEnv.Clone()
 
-sdist_gen = PartEnv.Command(
-    '/pip/libpartition-0.1.dev0-py3-none-any.whl', 'setup.py',
-    'cd ' + Dir('#src/contrail-common/libpartition').path + ' && ' + 'python3 setup.py bdist_wheel --dist-dir /pip')
-PartEnv.Alias('install', sdist_gen)
+base_path = '#src/contrail-common/libpartition/'
+
+sources = ['setup.py', 'requirements.txt']
+sources += env.AddPythonSources('libpartition')
+
+sdist_gen = env.Command(
+    '/pip/libpartition-0.1.dev0-py3-none-any.whl', sources,
+    'cd ' + Dir(base_path).path + ' && ' + 'python3 setup.py bdist_wheel --dist-dir /pip')
+env.Alias('install', sdist_gen)
